@@ -10,6 +10,12 @@ actors.max=2
 # Use the short plot or long plot description from IMDB : short or long
 imdb.plot=short
 
+# Max number of lines in plot from Sratim web site
+sratim.plotLineMax=8
+
+# Max line length - required for visual hebrew line truncate
+sratim.plotLineMaxChar=60
+
 # Download fanart image for movies using the IMDB id : true or false
 moviedb.fanart.download=false
 background.width=1280
