@@ -23,7 +23,8 @@ MovieJukebox 1.0.16 beta
   - Fixed defect #480 AppleTrailerPlugin uses a charset not universally supported
   - Fixed defect #483 The rating is the same as top250 when using nfo file
   - Fixed defect #484 WebBrowser charset detection error
-  - Fixed defect #485 Update for Kinopoisk plugin that allows you to specify IMDB movie URL in .nfo 
+  - Fixed defect #485 Update for Kinopoisk plugin that allows you to specify IMDB movie URL in .nfo
+  - Enhancement  #492 Updates for Sratim plugin and the Hebrew skin
   
 MovieJukebox 1.0.15 beta
 ------------------------
